# feedpilot

./: .mcp-servers.json  AGENTS.md  IMPROVEMENTS.md  MCP-SETUP.md  README.md  SKILL.md  TODO.md  mcp-config.example.json  pyproject.toml
src/feedpilot/: __main__.py  cache.py  feeds.py  seen.py  server.py  sources.py  sources.toml  user_sources.py
tests/: test_server.py
