[project]
name = "feedpilot"
version = "0.1.0"
description = "Daily tech digest MCP server powered by RSS feeds"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
]

[project.scripts]
feedpilot = "feedpilot.server:run"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feedpilot"]

[tool.ruff]
line-length = 120
